vertical alignment fixup

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -3768,7 +3768,7 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
         background-image: url("../img/soe_lg_arrow_right_black.svg");
         background-repeat: no-repeat;
         background-size: 41px 30px;
-        vertical-align: -10%;
+        vertical-align: -15%;
         padding-left: 41px;
         margin-left: 12px; }
         @media (max-width: 767px) {
