--- a/scss/components/_soe_dm_issue.scss
+++ b/scss/components/_soe_dm_issue.scss
@@ -760,7 +760,7 @@
             background-image: url("../img/soe_lg_arrow_right_black.svg");
             background-repeat: no-repeat;
             background-size: 41px 30px;
-            vertical-align: -10%;
+            vertical-align: -15%;
             padding-left: 41px;
             margin-left: 12px;
             @include breakpoint-max(small) {
